--- a/alis.conf
+++ b/alis.conf
@@ -11,7 +11,7 @@
 ## KEYS sets keyboard layout.
 ## LOG generates a log file with the commands executed and output generated during installation.
 ### The log file is saved to /var/log/alis.log.
-KEYS="es"
+KEYS="us"
 LOG="false"
 
 # partition
@@ -56,8 +56,8 @@ PING_HOSTNAME="mirrors.kernel.org"
 ## KERNELS additional kernels and headers to install.
 ## KERNELS_COMPRESSION selects de algorithm for kernel compression.
 ## KERNELS_PARAMETERS specific kernel parameters to set on boot. eg. iommu=soft
-REFLECTOR="false"
-REFLECTOR_COUNTRIES=("Spain")
+REFLECTOR="true"
+REFLECTOR_COUNTRIES=("Norway")
 PACMAN_MIRROR="https://mirrors.kernel.org/archlinux/\$repo/os/\$arch"
 KERNELS="!linux-lts !linux-lts-headers !linux-hardened !linux-hardened-headers !linux-zen !linux-zen-headers" # (multiple)
 KERNELS_COMPRESSION="!gzip !bzip2 !lzma !xz !lzop !lz4 zstd"
@@ -78,11 +78,11 @@ DISPLAY_DRIVER_HARDWARE_ACCELERATION_INTEL="intel-media-driver !libva-intel-driv
 # config
 ## Some variables for system configuration, from timezone, locale and keyboard to the root password.
 ## ROOT_PASSWORD root user password. If "ask" password alis asks for a secure password.
-TIMEZONE="/usr/share/zoneinfo/Europe/Madrid"
-LOCALES=("es_ES.UTF-8 UTF-8" "en_US.UTF-8 UTF-8")
-LOCALE_CONF=("LANG=es_ES.UTF-8" "LANGUAGE=es_ES:es:en_US:en")
-KEYMAP="KEYMAP=es"
-KEYLAYOUT="es"
+TIMEZONE="/usr/share/zoneinfo/Europe/Oslo"
+LOCALES=("no_NB.UTF-8 UTF-8" "en_US.UTF-8 UTF-8")
+LOCALE_CONF=("LANG=en_US.UTF-8" "LANGUAGE=en_US:en")
+KEYMAP="KEYMAP=us"
+KEYLAYOUT="us"
 KEYMODEL=""
 KEYVARIANT=""
 KEYOPTIONS=""
@@ -95,7 +95,7 @@ ROOT_PASSWORD_RETYPE="ask"
 # user
 ## USER_NAME, USER_PASSWORD Regular user to create in the system. A password must be specified, if "ask" password alis asks for a secure password.
 ## ADDITIONAL_USERS is an array of additional users to create in the system, if "ask" password alis asks for a secure password.
-USER_NAME="picodotdev"
+USER_NAME="marcus"
 USER_PASSWORD="ask"
 USER_PASSWORD_RETYPE="ask"
 ADDITIONAL_USERS=() # eg. ("user1=password1" "user2=password2")
@@ -119,11 +119,11 @@ BOOTLOADER="!grub !refind systemd" # (single)
 
 # shell
 ## CUSTOM_SHELL configures an alternative custom shell interpreter.
-CUSTOM_SHELL="bash !zsh !dash !fish" # (single)
+CUSTOM_SHELL="zsh !bash !dash !fish" # (single)
 
 # desktop
 ## DESKTOP_ENVIRONMENT installs a desktop environment.
-DESKTOP_ENVIRONMENT="!gnome !kde !xfce !mate !cinnamon !lxde !i3-wm !i3-gaps" # (single)
+DESKTOP_ENVIRONMENT="i3-gaps !gnome !kde !xfce !mate !cinnamon !lxde !i3-wm" # (single)
 
 # packages (all multiple)
 ## PACKAGES_MULTILIB configures multilib repository for pacman and install multilib packages for display driver
